[gd_scene load_steps=3 format=3 uid="uid://b73nw5sikmbqu"]

[ext_resource type="Script" path="res://Components/HighscoreLabel.gd" id="1_4q0rx"]
[ext_resource type="FontFile" uid="uid://bk8b0qsjfd1xy" path="res://FONTS/VT323-Regular.ttf" id="2_30peu"]

[node name="HighscoreLabel" type="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4q0rx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="PositionLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_30peu")
theme_override_font_sizes/font_size = 50
text = "1"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("2_30peu")
theme_override_font_sizes/font_size = 50
text = "AAA"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_30peu")
theme_override_font_sizes/font_size = 50
text = "1000"
horizontal_alignment = 1
